deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapi-ingress
spec:
  rules:
    - host: testapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapi-service
                port:
                  number: 8080
